# awesome_project

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  commit_message_file
docs/: doc_manager.py
docs/docs/features/: MAIN-DEV-F2400001_implement_v-model_based_script_management_system.md  MAIN-DEV-F2400002_design_overall_script_management_system_architecture.md  MAIN-DEV-F2400003_develop_detailed_script_organization_structure.md  MAIN-DEV-F2400004_design_central_script_management_tool.md  MAIN-DEV-F2400005_implement_script_categorization_and_organization.md  MAIN-DEV-F2400006_develop_unit_tests_for_script_management_functions.md  MAIN-DEV-F2400007_implement_integration_tests_for_script_interactions.md  MAIN-DEV-F2400008_create_system-wide_tests_for_v-model_workflow.md  MAIN-DEV-F2400009_prepare_acceptance_criteria_and_tests.md
docs/docs/tasks/: TASK001_implement_basic_task_management_system.md  TASK002_develop_command_line_interface.md  TASK003_implement_state_machine_system.md  (+8 more)
script/: backup_commit_helper.sh  check_compile.sh  check_style.sh  commit_helper.py  manage_dependencies.sh  script_manager.py
script/1_requirements/: doc_manager.py  feature_cli.py
script/5_implementation/: commit_helper.py  format_code.sh  smart_commit.py
src/: CMakeLists.txt  main.c
src/role/: role.h  role_factory.c  role_factory.h  role_types.h
src/role/core/: state_machine.c  (+1 more)
src/task/: order.c  order.h  order_context.c  order_context.h  task.c  task.h  task_manager.c  task_manager.h
tests/: CMakeLists.txt  test_main.c  test_order.c  test_task_manager.c
(+10 files in other folders)
